Cambios en prueba

--- a/pages/accesorios.html
+++ b/pages/accesorios.html
@@ -27,7 +27,7 @@
     </header>
     <main>
         <section>
-            <h1>Los accesorios mas vendidos:</h1>
+            <h1>Los accesorios mas buscados:</h1>
             <ol>
                 <li>Inflador</li>
                 <li>Casco</li>
