--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 </head>
 <body>
     <div class="container">
-        <header class="logoMasNav">
+        <header>
             <div id="logo">
                 <a href="index.html"><img src="img/Logo.png" alt="Tu bici" width="80" height="80"/></a>
             </div>
             <nav>
-                <ul class="navBar">
+                <ul>
                     <li><a href="index.html">Inicio</a></li>
                     <li><a href=".\pages\bicicletas.html">Bicicletas</a></li>
                     <li><a href=".\pages\accesorios.html">Accesorios</a></li>
@@ -26,7 +26,7 @@
                 </ul>
             </nav>
         </header>
-        <main class="portada">
+        <main>
             <h1>Las mejores bicicletas</h1>
             <section class="portada">
                 <article class="destacado">
