--- a/pages/indumentaria.html
+++ b/pages/indumentaria.html
@@ -12,12 +12,12 @@
 </head>
 <body>
     <div class="container">
-        <header class="logoMasNav">
+        <header>
             <div id="logo">
                 <a href="../index.html"><img src="../img/Logo.png" alt="Tu bici" width="80" height="80"/></a>
             </div>
             <nav>
-                <ul class="navBar">
+                <ul>
                     <li><a href="../index.html">Inicio</a></li>
                     <li><a href="bicicletas.html">Bicicletas</a></li>
                     <li><a href="accesorios.html">Accesorios</a></li>
@@ -37,7 +37,7 @@
 
         <footer>
             <h6>Copyright 2022 - www.tubici.com TODOS LOS DERECHOS RESERVADOS.<br>Está prohibida la reproducción total o parcial, sin la expresa autorización de la administradora de la tienda virtual.</br>Las ofertas publicadas son válidas únicamente para compras online // Las especificaciones técnicas y descripciones están sujetas a cambios sin previo aviso.</h6>
-            <div class="redes">
+            <div class="redes"> 
                 <img src="../img/face.png" alt="Facebook">
                 <img src="../img/insta.png" alt="Instagram">
                 <img src="../img/mail.png" alt="mail">
