--- a/pages/bicicletas.html
+++ b/pages/bicicletas.html
@@ -73,9 +73,11 @@
 
     <footer>
         <h6>Copyright 2022 - www.tubici.com TODOS LOS DERECHOS RESERVADOS.<br>Está prohibida la reproducción total o parcial, sin la expresa autorización de la administradora de la tienda virtual.</br>Las ofertas publicadas son válidas únicamente para compras online // Las especificaciones técnicas y descripciones están sujetas a cambios sin previo aviso.</h6>
-        <img src="../img/face.png" alt="Facebook">
-        <img src="../img/insta.png" alt="Instagram">
-        <img src="../img/mail.png" alt="mail">
+        <div class="redes"> 
+            <img src="../img/face.png" alt="Facebook">
+            <img src="../img/insta.png" alt="Instagram">
+            <img src="../img/mail.png" alt="mail">
+        </div>
     </footer>
 
 </body>
