--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tu bici</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="css/estilo.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="container">
+    <div class="cuerpo">
         <header>
             <div id="logo">
                 <a href="index.html"><img src="img/Logo.png" alt="Tu bici" width="80" height="80"/></a>
@@ -27,21 +28,50 @@
             </nav>
         </header>
         <main>
-            <h1>Las mejores bicicletas</h1>
-            <section class="portada">
-                <article class="destacado">
-                    <h2>Bicicletas MTB</h2>
-                    <img src="./img/bicis.jpg" alt="Bicicletas" width="170" height="115">
-                </article> 
-                <article>
-                    <h2>Accesorios</h2>
-                    <img src="./img/accesorios.jpg" alt="Accesorios" width="170" height="174">
-                </article>
-                <article>
-                    <h2>Indumentaria</h2>
-                    <img src="./img/indumentaria.jpg" alt="Indumentaria" width="170" height="130">
-                </article> 
-            </section>       
+            <div class="container-fluid">
+                <h1>Las mejores bicicletas</h1>
+                <section class="portada">
+                    <article class="destacado">
+                        <h2>Bicicletas MTB</h2>
+                        <img src="./img/bicis.jpg" alt="Bicicletas" width="170" height="115">
+                    </article> 
+                    <article>
+                        <h2>Accesorios</h2>
+                        <img src="./img/accesorios.jpg" alt="Accesorios" width="170" height="174">
+                    </article>
+                    <article>
+                        <h2>Indumentaria</h2>
+                        <img src="./img/indumentaria.jpg" alt="Indumentaria" width="170" height="130">
+                    </article> 
+                </section>   
+                <br>  
+                <h2>LA OPINIÓN DE <strong> NUESTROS CLIENTES</strong></h2>        
+                <section class="container d-flex justify-content-between ">
+                        <div class="card" style="width: 18rem;">
+                        <img src="./img/op03.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">Ignacio Bertran</h5>
+                          <p class="card-text">
+                            Son de las más completas de Rosario, y la atención la verdad es excelente.</p>
+                        </div>
+                      </div>
+                      <div class="card" style="width: 18rem;">
+                        <img src="./img/op02.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">Nero</h5>
+                          <p class="card-text">                         Excelente atención y precios! De lo mejor y más recomendable... Muchas gracias</p>
+                        </div>
+                      </div>
+                      <div class="card" style="width: 18rem;">
+                        <img src="./img/op01.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">Mariana Valli</h5>
+                          <p class="card-text">
+                            Excelente atención y sobre todo un taller de lujo con mecánicos especializados de primer nivel!!! Muy recomendable!</p>
+                        </div>
+                      </div>  
+                </section>      
+            </div>    
         </main>    
         <footer>
             <h6>Copyright 2022 - www.tubici.com TODOS LOS DERECHOS RESERVADOS.<br>Está prohibida la reproducción total o parcial, sin la expresa autorización de la administradora de la tienda virtual.</br>Las ofertas publicadas son válidas únicamente para compras online // Las especificaciones técnicas y descripciones están sujetas a cambios sin previo aviso.</h6>
@@ -52,5 +82,6 @@
             </div>    
         </footer>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
