--- a/pages/indumentaria.html
+++ b/pages/indumentaria.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="container">
+    <div class="cuerpo">
         <header>
             <div id="logo">
                 <a href="../index.html"><img src="../img/Logo.png" alt="Tu bici" width="80" height="80"/></a>
