--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 </section>   
                 <br>  
                 <h2>LA OPINIÓN DE <strong> NUESTROS CLIENTES</strong></h2>        
-                <section class="container d-flex justify-content-between ">
+                <section class="container d-flex justify-content-around">
                         <div class="card" style="width: 18rem;">
                         <img src="./img/op03.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
