--- a/index.html
+++ b/index.html
@@ -28,6 +28,44 @@
             </nav>
         </header>
         <main>
+            <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-indicators">
+                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
+                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="Slide 5"></button>
+                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="5" aria-label="Slide 6"></button>
+                </div>
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img src="./img/1.jpg" class="d-block w-100" alt="..." height="300">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="./img/2.jpg" class="d-block w-100" alt="..." height="300">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="./img/3.jpg" class="d-block w-100" alt="..." height="300">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="./img/4.jpg" class="d-block w-100" alt="..." height="300">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="./img/5.jpg" class="d-block w-100" alt="..." height="300">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="./img/6.jpg" class="d-block w-100" alt="..." height="300">
+                  </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
+              </div>
             <div class="container-fluid">
                 <h1>Las mejores bicicletas</h1>
                 <section class="portada">
@@ -51,23 +89,21 @@
                         <img src="./img/op03.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                           <h5 class="card-title">Ignacio Bertran</h5>
-                          <p class="card-text">
-                            Son de las más completas de Rosario, y la atención la verdad es excelente.</p>
+                          <p class="card-text">Son de las más completas de Rosario, y la atención la verdad es excelente.</p>
                         </div>
                       </div>
                       <div class="card" style="width: 18rem;">
                         <img src="./img/op02.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                           <h5 class="card-title">Nero</h5>
-                          <p class="card-text">                         Excelente atención y precios! De lo mejor y más recomendable... Muchas gracias</p>
+                          <p class="card-text">Excelente atención y precios! De lo mejor y más recomendable... Muchas gracias</p>
                         </div>
                       </div>
                       <div class="card" style="width: 18rem;">
                         <img src="./img/op01.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                           <h5 class="card-title">Mariana Valli</h5>
-                          <p class="card-text">
-                            Excelente atención y sobre todo un taller de lujo con mecánicos especializados de primer nivel!!! Muy recomendable!</p>
+                          <p class="card-text">Excelente atención y sobre todo un taller de lujo con mecánicos especializados de primer nivel!!! Muy recomendable!</p>
                         </div>
                       </div>  
                 </section>      
