--- a/index.html
+++ b/index.html
@@ -14,18 +14,36 @@
 <body>
     <div class="cuerpo">
         <header>
-            <div id="logo">
-                <a href="index.html"><img src="img/Logo.png" alt="Tu bici" width="80" height="80"/></a>
-            </div>
-            <nav>
-                <ul>
-                    <li><a href="index.html">Inicio</a></li>
-                    <li><a href=".\pages\bicicletas.html">Bicicletas</a></li>
-                    <li><a href=".\pages\accesorios.html">Accesorios</a></li>
-                    <li><a href=".\pages\indumentaria.html">Indumentaria</a></li>
-                    <li><a href=".\pages\contacto.html">Contacto</a></li>
+          <div id="logo">
+            <a href="index.html"><img src="img/Logo.png" alt="Tu bici" width="80" height="80" /></a>
+          </div>
+          <nav class="navbar navbar-expand-lg">
+            <div class="container-fluid">
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01"
+                aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse justify-content-center w-100 navbar-collapse" id="navbarTogglerDemo01">
+                <ul class="navbar-nav justify-content-evenly w-100 me-auto mb-2 mb-lg-0">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="./pages/bicicletas.html">Bicicletas</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="./pages/indumentaria.html">Indumentaria</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="./pages/accesorios.html">Accesorios</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="./pages/contacto.html">Contacto</a>
+                  </li>
                 </ul>
-            </nav>
+              </div>
+            </div>
+          </nav>
         </header>
         <main>
             <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
@@ -95,14 +113,14 @@
                       <div class="card" style="width: 18rem;">
                         <img src="./img/op02.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                          <h5 class="card-title">Nero</h5>
+                          <h5 class="card-title">Mariana Valli</h5>
                           <p class="card-text">Excelente atención y precios! De lo mejor y más recomendable... Muchas gracias</p>
                         </div>
                       </div>
                       <div class="card" style="width: 18rem;">
                         <img src="./img/op01.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                          <h5 class="card-title">Mariana Valli</h5>
+                          <h5 class="card-title">Lucas Cardoni</h5>
                           <p class="card-text">Excelente atención y sobre todo un taller de lujo con mecánicos especializados de primer nivel!!! Muy recomendable!</p>
                         </div>
                       </div>  
