--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -16,15 +16,33 @@
         <div id="logo">
             <a href="../index.html"><img src="../img/Logo.png" alt="Tu bici" width="80" height="80"/></a>
         </div>
-        <nav>
-            <ul>
-                <li><a href="../index.html">Inicio</a></li>
-                <li><a href="bicicletas.html">Bicicletas</a></li>
-                <li><a href="accesorios.html">Accesorios</a></li>
-                <li><a href="indumentaria.html">Indumentaria</a></li>
-                <li><a href="contacto.html">Contacto</a></li>
-            </ul>
-        </nav>
+        <nav class="navbar navbar-expand-lg">
+            <div class="container-fluid">
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01"
+                aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse justify-content-center w-100 navbar-collapse" id="navbarTogglerDemo01">
+                <ul class="navbar-nav justify-content-evenly w-100 me-auto mb-2 mb-lg-0">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="../pages/bicicletas.html">Bicicletas</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="../pages/indumentaria.html">Indumentaria</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="../pages/accesorios.html">Accesorios</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="../pages/contacto.html">Contacto</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
     </header>
     <main>
         <h1>Formulario de Contacto</h1>
