agregue meta description y keywords

--- a/pages/bicicletas.html
+++ b/pages/bicicletas.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="En esta sección te mostramos toda la información sobre las marcas con las que trabajamos, que son las más vendidas del mercado para que las conozcas y elijas la tuya">
+    <meta name="keywords"  content="Venzo, Raleigh, Giant, Scott, bicicletas, marcas, comparación">
     <title>Tu bici | Bicicletas</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/estilos.css"/>
