--- a/pages/accesorios.html
+++ b/pages/accesorios.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="En esta sección vas a encontrar los mejores componentes y accesorios del mercado para tu bicicleta.">
+    <meta name="keywords"  content="accesorios, Shimano, bicicletas, componentes, repuestos">
     <title>Tu bici | Accesorios</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/estilos.css"/>
