--- a/pages/indumentaria.html
+++ b/pages/indumentaria.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="En esta sección vas a encontrar la mejor calidad en indumentaria deportiva para que puedas andar cómodo y seguro">
+    <meta name="keywords"  content="ropa, indumentaria, deportiva, calzas, remeras, medias">
     <title>Tu bici | Indumentaria</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/estilos.css"/>
