--- a/index.html
+++ b/index.html
@@ -59,25 +59,25 @@
                 </div>
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="./img/1.jpg" class="d-block w-100" alt="..." height="300">
+                    <img src="./img/1.jpg" class="d-block w-100" alt="servicio mecánico" height="300">
                   </div>
                   <div class="carousel-item">
-                    <img src="./img/2.jpg" class="d-block w-100" alt="..." height="300">
+                    <img src="./img/2.jpg" class="d-block w-100" alt="bicicletas Polygon" height="300">
                   </div>
                   <div class="carousel-item">
-                    <img src="./img/3.jpg" class="d-block w-100" alt="..." height="300">
+                    <img src="./img/3.jpg" class="d-block w-100" alt="Logo Volta" height="300">
                   </div>
                   <div class="carousel-item">
-                    <img src="./img/4.jpg" class="d-block w-100" alt="..." height="300">
+                    <img src="./img/4.jpg" class="d-block w-100" alt="Logo Sunpeed" height="300">
                   </div>
                   <div class="carousel-item">
-                    <img src="./img/5.jpg" class="d-block w-100" alt="..." height="300">
+                    <img src="./img/5.jpg" class="d-block w-100" alt="Logo KTM" height="300">
                   </div>
                   <div class="carousel-item">
-                    <img src="./img/6.jpg" class="d-block w-100" alt="..." height="300">
+                    <img src="./img/6.jpg" class="d-block w-100" alt="Logo Giant" height="300">
                   </div>
                 </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                <button class="carousel-coimgntrol-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
                   <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                   <span class="visually-hidden">Previous</span>
                 </button>
@@ -106,21 +106,21 @@
                 <h2>LA OPINIÓN DE <strong> NUESTROS CLIENTES</strong></h2>        
                 <section class="container d-flex justify-content-around">
                         <div class="card" style="width: 18rem;">
-                        <img src="./img/op03.jpg" class="card-img-top" alt="...">
+                        <img src="./img/op03.jpg" class="card-img-top" alt="foto de Ignacio">
                         <div class="card-body">
                           <h5 class="card-title">Ignacio Bertran</h5>
                           <p class="card-text">Son de las más completas de Rosario, y la atención la verdad es excelente.</p>
                         </div>
                       </div>
                       <div class="card" style="width: 18rem;">
-                        <img src="./img/op02.jpg" class="card-img-top" alt="...">
+                        <img src="./img/op02.jpg" class="card-img-top" alt="foto de Mariana">
                         <div class="card-body">
                           <h5 class="card-title">Mariana Valli</h5>
                           <p class="card-text">Excelente atención y precios! De lo mejor y más recomendable... Muchas gracias</p>
                         </div>
                       </div>
                       <div class="card" style="width: 18rem;">
-                        <img src="./img/op01.jpg" class="card-img-top" alt="...">
+                        <img src="./img/op01.jpg" class="card-img-top" alt="foto de Lucas">
                         <div class="card-body">
                           <h5 class="card-title">Lucas Cardoni</h5>
                           <p class="card-text">Excelente atención y sobre todo un taller de lujo con mecánicos especializados de primer nivel!!! Muy recomendable!</p>
