--- a/pages/bicicletas.html
+++ b/pages/bicicletas.html
@@ -58,22 +58,22 @@
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="../img/1.jpg" class="d-block w-100" alt="..." height="300">
+                <img src="../img/1.jpg" class="d-block w-100" alt="servicio mecánico" height="300">
               </div>
               <div class="carousel-item">
-                <img src="../img/2.jpg" class="d-block w-100" alt="..." height="300">
+                <img src="../img/2.jpg" class="d-block w-100" alt="bicicletas Polygon" height="300">
               </div>
               <div class="carousel-item">
-                <img src="../img/3.jpg" class="d-block w-100" alt="..." height="300">
+                <img src="../img/3.jpg" class="d-block w-100" alt="Logo Volta" height="300">
               </div>
               <div class="carousel-item">
-                <img src="../img/4.jpg" class="d-block w-100" alt="..." height="300">
+                <img src="../img/4.jpg" class="d-block w-100" alt="Logo Sunpeed" height="300">
               </div>
               <div class="carousel-item">
-                <img src="../img/5.jpg" class="d-block w-100" alt="..." height="300">
+                <img src="../img/5.jpg" class="d-block w-100" alt="Logo KTM" height="300">
               </div>
               <div class="carousel-item">
-                <img src="../img/6.jpg" class="d-block w-100" alt="..." height="300">
+                <img src="../img/6.jpg" class="d-block w-100" alt="Logo Giant" height="300">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
