--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     <img src="./img/6.jpg" class="d-block w-100" alt="Logo Giant" height="300">
                   </div>
                 </div>
-                <button class="carousel-coimgntrol-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
                   <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                   <span class="visually-hidden">Previous</span>
                 </button>
