--- a/pages/indumentaria.html
+++ b/pages/indumentaria.html
@@ -95,7 +95,7 @@
         </main>
 
         <footer>
-            <h6>Copyright 2022 - www.tubici.com TODOS LOS DERECHOS RESERVADOS.<br>Está prohibida la reproducción total o parcial, sin la expresa autorización de la administradora de la tienda virtual.</br>Las ofertas publicadas son válidas únicamente para compras online // Las especificaciones técnicas y descripciones están sujetas a cambios sin previo aviso.</h6>
+            <h6>Copyright 2022 - www.tubici.com TODOS LOS DERECHOS RESERVADOS.<br>Está prohibida la reproducción total o parcial, sin la expresa autorización de la administradora de la tienda virtual.</br></h6>
             <div class="redes"> 
                 <img src="../img/face.png" alt="Facebook">
                 <img src="../img/insta.png" alt="Instagram">
