--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Tu bici</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="css/estilos.css"/>
+    <link rel="icon" href="./img/logo.ico"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
@@ -19,7 +20,7 @@
           <div id="logo">
             <a href="index.html"><img src="img/Logo.png" alt="Tu bici" width="80" height="80" /></a>
           </div>
-          <nav class="navbar navbar-expand-lg">
+          <nav class="navbar navbar-expand-lg menuHamb">
             <div class="container-fluid">
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01"
                 aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
@@ -104,7 +105,7 @@
                 </section>   
                 <br>  
                 <h2>LA OPINIÓN DE <strong> NUESTROS CLIENTES</strong></h2>        
-                <section class="container d-flex justify-content-around">
+                <section class="container d-flex justify-content-around cartas">
                         <div class="card" style="width: 18rem;">
                         <img src="./img/op03.jpg" class="card-img-top" alt="foto de Ignacio">
                         <div class="card-body">
