--- a/pages/indumentaria.html
+++ b/pages/indumentaria.html
@@ -9,6 +9,7 @@
     <title>Tu bici | Indumentaria</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/estilos.css"/>
+    <link rel="icon" href="../img/logo.ico"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
@@ -19,7 +20,7 @@
             <div id="logo">
                 <a href="../index.html"><img src="../img/Logo.png" alt="Tu bici" width="80" height="80"/></a>
             </div>
-            <nav class="navbar navbar-expand-lg">
+            <nav class="navbar navbar-expand-lg menuHamb">
               <div class="container-fluid">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01"
                   aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
